--- a/drum-kit/styles/style.css
+++ b/drum-kit/styles/style.css
@@ -31,32 +31,6 @@ body {
   justify-content: space-between;
 }
 
-@media screen and (max-width: 1300px) {
-  .keyboard {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 960px) {
-  .keyboard {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 840px) {
-  .keyboard {
-    width: 90%;
-  }
-
-}
-
-@media screen and (max-width: 740px) {
-  .keyboard {
-    width: 50%;
-    flex-wrap: wrap;
-  }
-}
-
 .keyboard__key {
   height: 90px;
   width: 90px;
@@ -67,20 +41,6 @@ body {
   box-shadow: 3px 3px 5px 2px rgba(67, 67, 68, 0.4);
   cursor: pointer;
   transition: all 0.2s linear;
-}
-
-@media screen and (max-width: 1120px) {
-  .keyboard__key {
-    height: 80px;
-    width: 80px;
-  }
-}
-
-@media screen and (max-width: 840px) {
-  .keyboard__key {
-    height: 70px;
-    width: 70px;
-  }
 }
 
 .keyboard__key:hover {
@@ -103,7 +63,56 @@ body {
   margin-top: 10%;
 }
 
-@media screen and (max-width: 840px) {
+@media screen and (max-width: 1300px) {
+  .keyboard {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1120px) {
+  .keyboard {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .keyboard {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 12px;
+    width: 60%;
+  }
+
+  .key--row_first {
+    justify-self: start;
+  }
+
+  .key--row_second {
+    justify-self: end;
+    margin-right: -30px;
+  }
+
+}
+
+@media screen and (max-width: 810px) {
+  .keyboard {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .keyboard {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .keyboard__key {
+    height: 80px;
+    width: 80px;
+  }
+
   .key__title {
     font-size: 26px;
   }
@@ -112,4 +121,25 @@ body {
     font-size: 10px;
   }
 }
+
+@media screen and (max-width: 470px) {
+  .keyboard {
+    width: 90%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-row-gap: 12px;
+  }
+
+  .key--row_first {
+    justify-self: center;
+  }
+
+  .key--row_second {
+    justify-self: center;
+    margin-right: 0;
+  }
+
+}
+
+
 
