--- a/meditation-app/styles/style.css
+++ b/meditation-app/styles/style.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   padding: 0;
+  /* background-color: rgba(72, 53, 76, 0.7); */
 }
 
 .visually-hidden {
@@ -15,90 +16,83 @@ body {
   margin: -1px;
 }
 
-.header {
-  height: 140px;
+.page {
+  height: 100vh;
   width: 100%;
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.2);
-  z-index: 3;
+  position: relative;
+  overflow: hidden;
 }
 
-/* .header::before {
-    position: absolute;
-    content: " ";
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: black;
-    opacity: 0.5;
-} */
+.video-block {
+  width: 100%;
+  height: 100%;
 
-.header__navigation {
+}
+
+.navigation {
+  height: 100%;
+  width: 160px;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
   position: absolute;
-  content: "";
-  top: 50%;
-  left: 60%;
-  transform: translate(0, -50%);
+  top: 0;
+  right: 0;
+  box-shadow: -9px 0px 12px -3px rgba(34, 60, 80, 0.8);
 }
 
 .list {
+  height: 100%;
   list-style-type: none;
   padding-left: 0;
-  margin-left: 0;
-}
-
-.navigation__list {
-  display: flex;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .navigation__item {
-  height: 100px;
-  width: 100px;
+  height: 90px;
+  width: 90px;
   border-radius: 50%;
   cursor: pointer;
   overflow: hidden;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.8), 0 2px 10px rgba(0, 0, 0, 0.8);
-  /* box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.8),
-    -3px -8px 10px -3px rgba(0, 0, 0, 0.8); */
-  transition: all 0.3s linear;
+  transition: all 0.2s linear;
   opacity: 0.9;
 }
 
-.navigation__item + .navigation__item {
-  margin-left: 30px;
-}
-
 .navigation__item:hover {
-  border: 1px solid rgba(222, 222, 222, 0.4);
+  /* border: 1px solid rgba(222, 222, 222, 0.4); */
   box-shadow: 0px 4px 10px 2px rgba(222, 222, 222, 0.4),
     -1px -8px 10px -5px rgba(222, 222, 222, 0.4);
   opacity: 1;
 }
 
+.fake {
+  height: 100%;
+  width: 160px;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white;
+}
+
 .navigation__image,
 .block__image,
-.triangle {
+.video,
+.video-item {
   object-fit: cover;
   height: 100%;
   width: 100%;
-  /* display: block; */
 }
 
-.page,
-.block {
-  height: 100vh;
-  width: 100%;
-}
 
-.page {
-  position: relative;
-}
 
 .button {
-  /* background-color: transparent; */
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: transparent;
   border: none;
   outline: none;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.7), 0 2px 15px rgba(0, 0, 0, 0.9);
@@ -108,12 +102,13 @@ body {
 .button-play-stop {
   height: 150px;
   width: 150px;
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   border-radius: 50%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -123,55 +118,51 @@ body {
   border: 2px solid black;
 }
 
-/* .play {
-  width: 10px;
-  height: 60px;
-background-color: black;
-border-radius: 16%;
-position: relative;
-}
-.play::before {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  content: " ";
-  background-color: black;
-border-radius: 16%;
-transform: rotate(-60deg);
-transform-origin: 4px 4px;
-}
-
-.play::after {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  content: " ";
-  background-color: black;
-border-radius: 16%;
-transform: rotate(60deg);
-transform-origin: 4px 49px;
-} */
-
 .play {
   height: 100px;
   width: 100px;
 }
 
 .timer-controls {
-  width: 60%;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, 0);
+  width: 220px;
+  height: 100%;
+  padding: 60px 0 100px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  right: 160px;
+  z-index: 1;
+  box-shadow: -9px 0px 12px -3px rgba(34, 60, 80, 0.4);
+  transform: translateX(200%);
+  transition: all 0.3s ease-out;
+}
+.timer-controls_opened .timer-controls {
+  transform: translateX(0);
+}
+
+.timer-controls::after {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 160px;
+  background-color: rgba(0, 0, 0, 0.4);
+  top: 0;
+  left: 100%;
 }
 
 .timer__button {
   height: 60px;
-  width: 200px;
+  width: 180px;
   border-radius: 10px;
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 900;
+  background-color: rgba(255, 255, 255, 0.1);
+  opacity: 0.6;
 }
+
+
