--- a/Flex Panel Gallery/styles/style.css
+++ b/Flex Panel Gallery/styles/style.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Chelsea Market", cursive;
+  background-color: rgb(27, 19, 65);
 }
 
 .visually-hidden {
@@ -16,23 +17,133 @@ body {
   margin: -1px;
 }
 
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .blocks {
   height: 100vh;
-  width: 100%;
+  width: 90%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .block {
-  box-shadow: 0 0 10px 5px rgba(34, 60, 80, 0.5) inset;
+  height: 60%;
+  box-shadow: 4px 4px 8px 0px rgba(255, 255, 255, 0.1);
   overflow: hidden;
-  flex-basis: 0;
   flex-grow: 1;
   position: relative;
-  transition: flex-grow 0.5s ease-in;
-  border-left: 1px solid rgba(83, 82, 82, 0.3);
-  border-right: 1px solid rgba(83, 82, 82, 0.3);
+  transition: all 0.5s ease-in;
   cursor: pointer;
+  opacity: 0;
+}
+
+.block + .block {
+  margin-left: 28px;
+}
+
+.blocks .block:nth-child(even) {
+  margin-top: 28px;
+  transform: translateY(100%);
+}
+
+.blocks .block:nth-child(odd) {
+  margin-bottom: 28px;
+  transform: translateY(-100%);
+}
+
+.active .blocks .block:nth-child(even),
+.active .blocks .block:nth-child(odd) {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.block::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 3px solid #3d2e7a;
+  box-sizing: border-box;
+}
+
+.block__left-top,
+.block__right-bottom {
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.block__left-top::before,
+.block__left-top::after,
+.block__right-bottom::before,
+.block__right-bottom::after {
+  content: "";
+  background-color: rgb(255, 255, 255);
+  z-index: 1;
+  transition: all 0.5s ease-in-out;
+}
+
+.left-top--position::before,
+.left-top--position::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.left-top--size::before,
+.right-bottom--size::before {
+  height: 100%;
+  width: 2px;
+}
+
+.left-top--size::after,
+.right-bottom--size::after {
+  height: 2px;
+  width: 100%;
+}
+
+.right-bottom--position::before,
+.right-bottom--position::after {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.left-top--position::before {
+  transform: translateY(-110%);
+}
+
+.left-top--position::after {
+  transform: translateX(-110%);
+}
+
+.right-bottom--position::before {
+  transform: translateY(110%);
+}
+
+.right-bottom--position::after {
+  transform: translateX(110%);
+}
+
+.block--focused .left-top--position::before,
+.block--focused .right-bottom--position::before {
+  transform: translateY(0);
+}
+
+.block--focused .left-top--position::after,
+.block--focused .right-bottom--position::after {
+  transform: translateX(0);
 }
 
 .block__image {
@@ -41,7 +152,7 @@ body {
   width: 100%;
 }
 
-.block__image_image-center {
+.block__image--image_center {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -51,60 +162,170 @@ body {
 .block__text {
   width: 100%;
   color: white;
-  z-index: 2;
   text-align: center;
   text-transform: uppercase;
   margin: 0;
-  transition: all 0.2s linear;
+  transition: all 0.6s linear;
 }
 
-.block__text_text-top {
+.block__text--text_top {
   font-size: 35px;
-  text-shadow: 3px 3px 0 black;
-  position: absolute;
   top: 20%;
-  transform: translate(0, -50%);
 }
 
-.block__text_text-center {
+.block__text--text_center {
   font-size: 40px;
-  letter-spacing: -3px;
   text-shadow: 3px 4px 0 black;
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
 }
 
-.block__text_text-down {
+.block__text--text_down {
   font-size: 55px;
+  top: 80%;
+}
+
+.block__text--text_top,
+.block__text--text_down {
   text-shadow: 3px 3px 0 black;
   position: absolute;
-  top: 80%;
   transform: translate(0, -50%);
 }
 
-.block > .block__text_text-top {
+.block > .block__text--text_top {
   transform: translateY(-400%);
 }
 
-.block.opened-active > .block__text_text-top {
+.block--opened > .block__text--text_top {
   transform: translate(0, -50%);
 }
 
-.block > .block__text_text-down {
+.block > .block__text--text_down {
   transform: translateY(600%);
 }
 
-.block.opened-active > .block__text_text-down {
+.block--opened > .block__text--text_down {
   transform: translate(0, -50%);
 }
 
-.block.block-opened {
+.block--opened {
+  height: 90%;
   flex-grow: 5;
+  margin-top: 28px;
+  margin-bottom: 28px;
+  box-shadow: 6px 6px 10px 0px rgba(255, 255, 255, 0.1);
 }
 
-.block.block-opened > .block__text_text-center {
-  font-size: 30px;
-  letter-spacing: -1px;
+.block--opened::after {
+  border: 3px solid rgb(255, 255, 255);
+}
+
+.block--font-size > .block__text--text_center {
+  font-size: 24px;
+}
+
+.block--opened > .block__text--text_center {
   color: rgba(255, 255, 255, 0.7);
 }
+
+@media screen and (max-width: 1400px) {
+  .blocks {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1260px) {
+  .block__text--text_center {
+    font-size: 34px;
+  }
+
+  .block--font-size > .block__text--text_center {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .block + .block {
+    margin-left: 18px;
+  }
+
+  .block--font-size > .block__text--text_center {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .block__text--text_center {
+    font-size: 28px;
+  }
+
+  .block__text--text_down {
+    font-size: 48px;
+  }
+
+  .block--opened {
+    height: 80%;
+    flex-grow: 4;
+  }
+
+  .block--font-size > .block__text--text_center {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .blocks {
+    flex-direction: column;
+  }
+
+  .block {
+    height: auto;
+    width: 60%;
+  }
+
+  .blocks .block:nth-child(even) {
+    margin: 10px 0 0;
+    transform: translateX(100%);
+  }
+  
+  .blocks .block:nth-child(odd) {
+    margin: 10px 0 0;
+    transform: translateX(-100%);
+  }
+
+  .blocks .block:last-child {
+    margin-bottom: 10px;
+  }
+
+  .active .blocks .block:nth-child(even),
+  .active .blocks .block:nth-child(odd) {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+  .block + .block {
+    margin: 0;
+  }
+
+  .block--opened {
+    width: 80%;
+    flex-grow: 6;
+  }
+
+  .block__text--text_center {
+    font-size: 36px;
+  }
+
+  .block--font-size > .block__text--text_center {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .block__text--text_top,
+  .block__text--text_down {
+    font-size: 28px;
+  }
+}
+
