--- a/Custom Video Player/Styles/style.css
+++ b/Custom Video Player/Styles/style.css
@@ -65,7 +65,7 @@ body {
   object-position: center;
 }
 
-.player__button {
+.player .player__button {
   height: 90px;
   width: 90px;
   position: absolute;
@@ -77,6 +77,28 @@ body {
   outline: none;
   border: none;
   display: none;
+  animation-name: apperance;
+  animation-duration: 0.6s;
+  animation-timing-function: linear;
+}
+
+.player--button-apperance .player__button {
+  display: block;
+}
+
+@keyframes apperance {
+  0% { 
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  50% { 
+    opacity: 0.5;
+    transform: translate(-50%, -50%) scale(1.2);
+   }
+  100% { 
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(1.4);
+   }
 }
 
 .player__button-icon {
@@ -85,13 +107,13 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-45%, -50%);
-  transition: all 0.3s linear;
+  transform: translate(-50%, -50%);
 }
 
 .button {
   cursor: pointer;
   opacity: 0.8;
+  transition: all 0.3s linear;
 }
 
 .button:hover {
@@ -105,7 +127,7 @@ body {
   position: absolute;
   bottom: 0;
   transform: translateY(100%);
-  transition: all 0.3s ease-out;
+  transition: all 0.3s linear;
   opacity: 0;
   z-index: -2;
 }
@@ -113,13 +135,7 @@ body {
 .form--grid {
   display: grid;
   grid-template-rows: 1fr 3fr;
-  grid-template-columns: repeat(15, 1fr);
-}
-
-.form--opened {
-  z-index: 1;
-  opacity: 1;
-  transform: translateY(0);
+  grid-template-columns: repeat(17, 1fr);
 }
 
 .input-duration--width {
@@ -128,8 +144,32 @@ body {
 }
 
 .input-duration--grid-area {
-  grid-column: 1/16;
+  grid-column: 1/18;
   grid-row: 1/2;
+}
+
+.form__input {
+  height: 4px;
+  -webkit-appearance: none;
+  appearance: none;
+  border: none;
+  outline: none;
+  background-color: #ffffff;
+  opacity: 0.8;
+}
+
+.form__input:hover {
+  opacity: 1;
+}
+
+.form__input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 10px;
+  width: 7px;
+  border-radius: 10%;
+  background: rgb(187, 9, 9);
+  cursor: pointer;
+  box-shadow: 0 5px 15px -5px rgb(0, 0, 0);
 }
 
 .form__button {
@@ -166,7 +206,7 @@ body {
 }
 
 .form__button-fullscreen--grid-area {
-  grid-column: 15/16;
+  grid-column: 17/18;
   grid-row: 2/3;
 }
 
@@ -180,51 +220,32 @@ body {
   align-self: center;
 }
 
-/* .input-volume {
-  opacity: 0;
-} */
+.input-volume {
+  /* opacity: 0; */
+  transition: opasity 0.3s linear 0.6s;
+}
 
 .form__time {
   color: white;
   /* transform: translateX(-100%); */
+  transition: transform 0.4s linear;
 }
 
 .time__current-time {
   margin-left: 10px;
 }
 
-/* new */
-.form__input {
-  height: 4px;
-  -webkit-appearance: none;
-  appearance: none;
-  border: none;
-  outline: none;
-  background-color: #ffffff;
-  opacity: 0.8;
-}
-
-/* .input-range::-webkit-slider-runnable-track {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 4px;
-  cursor: pointer;
-  background: rgba(255, 255, 255, 0.6);
-  border-radius: 3px;
-  border: none;
-  outline: none;
-} */
-
-.form__input:hover {
+.form--opened {
+  z-index: 1;
   opacity: 1;
+  transform: translateY(0);
 }
 
-.form__input::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  height: 10px;
-  width: 7px;
-  border-radius: 10%;
-  background: rgb(187, 9, 9);
-  cursor: pointer;
-  box-shadow: 0 5px 15px -5px rgb(0, 0, 0);
+/* .form--volume-opened .input-volume{
+  opacity: 1;
+  transition: opasity 0.3s linear;
 }
+
+.form--volume-opened .form__time{
+  transform: translateX(0);
+} */
