--- a/Custom Video Player/Styles/style.css
+++ b/Custom Video Player/Styles/style.css
@@ -24,6 +24,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .player {
@@ -32,8 +33,8 @@ body {
     -4px -4px 12px 4px rgba(92, 92, 92, 0.4);
   cursor: pointer;
   position: relative;
-  width: 960px;
-  height: 540px;
+  width: 65%;
+  height: 75%;
   transition: all 0.3s linear;
 }
 
@@ -56,6 +57,44 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: -1;
+}
+
+@media screen and (max-width: 1400px) {
+  .player {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 1180px) {
+  .player {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .player {
+    width: 90%;
+    height: 70%;
+  }
+
+  .player::before {
+    height: calc(100% + 40px);
+    width: calc(100% + 40px);
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .player {
+    width: 90%;
+    height: 60%;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .player {
+    width: 90%;
+    height: 50%;
+  }
 }
 
 .player__video {
@@ -190,7 +229,7 @@ body {
 .input-volume--width {
   grid-column: 5/7;
   grid-row: 2/3;
-  width: 100px;
+  width: 80%;
 }
 
 .form__time--grid-area {
@@ -221,13 +260,11 @@ body {
 }
 
 .input-volume {
-  /* opacity: 0; */
   transition: opasity 0.3s linear 0.6s;
 }
 
 .form__time {
   color: white;
-  /* transform: translateX(-100%); */
   transition: transform 0.4s linear;
 }
 
@@ -241,11 +278,51 @@ body {
   transform: translateY(0);
 }
 
-/* .form--volume-opened .input-volume{
-  opacity: 1;
-  transition: opasity 0.3s linear;
+@media screen and (max-width: 1040px) {
+  .form--grid {
+    grid-template-columns: repeat(15, 1fr);
+  }
+
+  .input-duration--grid-area {
+    grid-column: 1/16;
+  }
+
+  .form__button-fullscreen--grid-area {
+    grid-column: 15/16;
+  }
 }
 
-.form--volume-opened .form__time{
-  transform: translateX(0);
-} */
+@media screen and (max-width: 820px) {
+  .form--grid {
+    grid-template-columns: repeat(12, 1fr);
+  }
+
+  .input-duration--grid-area {
+    grid-column: 1/13;
+  }
+
+  .form__button-fullscreen--grid-area {
+    grid-column: 12/13;
+  }
+
+  .form__button {
+    height: 25px;
+    width: 35px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .button-fullscreen {
+    display: none;
+  }
+
+  .form__time--grid-area {
+    grid-column: 7/10;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .form__time--grid-area {
+    grid-column: 7/12;
+  }
+}
