--- a/Fun With Canvas/styles/style.css
+++ b/Fun With Canvas/styles/style.css
@@ -9,9 +9,6 @@
 body {
   margin: 0;
   padding: 0;
-  /* font-family: 'Mansalva', cursive;
-  font-size: 46px;
-  text-transform: uppercase; */
 }
 
 .visually-hidden {
@@ -36,7 +33,6 @@ body {
   height: 90vh;
   width: 90%;
   z-index: 1;
-
 }
 
 .paint__editor {
@@ -78,9 +74,8 @@ body {
   height: 100%;
   width: 100%;
   border-radius: 0 18px 18px 0;
-  border: 5px solid rgb(117, 148, 124);
+  border: 5px solid rgb(79, 112, 87);
   border-left: none;
- 
 }
 
 .paint__canvas::before {
@@ -101,12 +96,40 @@ body {
   margin-top: 14px;
 }
 
+[data-tooltip] {
+  position: relative;
+}
+
+[data-tooltip]::after {
+  content: attr(data-tooltip);
+  opacity: 0;
+  transition: all 0.6s linear;
+  padding: 4px 8px;
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  transform: translateX(-50%);
+  background-color: rgba(104, 129, 120, 0.8);
+  border-radius: 5px;
+  color: rgb(238, 222, 222);
+  font-size: 16px;
+  font-family: "Ubuntu", sans-serif;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  z-index: 2;
+}
+
+[data-tooltip]:hover::after {
+  opacity: 1;
+  top: calc(100% - 8px);
+  left: 100%;
+}
+
 .button {
   border-radius: 10%;
   border: none;
   outline: none;
   cursor: pointer;
-  transition: all 0.3s linear;
+  transition: all 0.4s linear;
 }
 
 .button:hover {
@@ -210,7 +233,6 @@ body {
   appearance: none;
   padding: 0;
   border: none;
-
   height: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3), 0 1px 7px rgba(0, 0, 0, 0.3);
 }
@@ -226,4 +248,53 @@ body {
 .input-color::-webkit-color-swatch-wrapper {
   border: none;
   padding: 0;
+}
+
+@media screen and (max-width: 840px) {
+  .paint {
+    height: 95vh;
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .paint__editor {
+    width: 90px;
+  }
+
+  .paint__canvas {
+    width: calc(100% - 90px);
+  }
+
+  .paint__button {
+    height: 56px;
+    width: 56px;
+    margin-top: 18px;
+  }
+
+  .button__icon {
+    height: 40px;
+    width: 40px;
+  }
+
+  [data-tooltip]::after {
+    padding: 3px 6px;
+    font-size: 14px;
+  }
+
+  .paint__form {
+    height: 15%;
+    width: 300%;
+  }
+
+  .form__input {
+    width: 90%;
+  }
+
+  .input-range::-webkit-slider-thumb {
+    height: 18px;
+    width: 10px;
+    margin-top: -8px;
+  }
+  
 }
