--- a/Flex Panel Gallery/styles/style.css
+++ b/Flex Panel Gallery/styles/style.css
@@ -32,6 +32,18 @@ body {
   overflow: hidden;
 }
 
+@media screen and (max-width: 1400px) {
+  .blocks {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .blocks {
+    flex-direction: column;
+  }
+}
+
 .block {
   height: 60%;
   box-shadow: 4px 4px 8px 0px rgba(255, 255, 255, 0.1);
@@ -41,26 +53,124 @@ body {
   transition: all 0.5s ease-in;
   cursor: pointer;
   opacity: 0;
+  animation-duration: 0.8s;
+  animation-timing-function: linear;
+}
+
+@media screen and (max-width: 880px) {
+  .block {
+    height: auto;
+    width: 60%;
+  }
 }
 
 .block + .block {
   margin-left: 28px;
 }
 
+@media screen and (max-width: 1100px) {
+  .block + .block {
+    margin-left: 18px;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .block + .block {
+    margin: 0;
+  }
+}
+
 .blocks .block:nth-child(even) {
   margin-top: 28px;
-  transform: translateY(100%);
+  animation-name: appearance-even;
 }
 
 .blocks .block:nth-child(odd) {
   margin-bottom: 28px;
-  transform: translateY(-100%);
+  animation-name: appearance-odd;
+}
+
+@keyframes appearance-even {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes appearance-odd {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .blocks .block:nth-child(even) {
+    margin: 10px 0 0;
+  }
+  
+  .blocks .block:nth-child(odd) {
+    margin: 10px 0 0;
+  }
+
+  .blocks .block:last-child {
+    margin-bottom: 10px;
+  }
+
+  @keyframes appearance-even {
+    0% {
+      opacity: 0;
+      transform: translateX(100%);
+    }
+    50% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes appearance-odd {
+    0% {
+      opacity: 0;
+      transform: translateX(-100%);
+    }
+    50% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
 }
 
 .active .blocks .block:nth-child(even),
 .active .blocks .block:nth-child(odd) {
   transform: translateY(0);
   opacity: 1;
+}
+
+@media screen and (max-width: 880px) {
+  .active .blocks .block:nth-child(even),
+  .active .blocks .block:nth-child(odd) {
+    transform: translateX(0);
+  }
 }
 
 .block::after {
@@ -181,9 +291,33 @@ body {
   transform: translate(0, -50%);
 }
 
+@media screen and (max-width: 1260px) {
+  .block__text--text_center {
+    font-size: 34px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .block__text--text_center {
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .block__text--text_center {
+    font-size: 36px;
+  }
+}
+
 .block__text--text_down {
   font-size: 55px;
   top: 80%;
+}
+
+@media screen and (max-width: 960px) {
+  .block__text--text_down {
+    font-size: 48px;
+  }
 }
 
 .block__text--text_top,
@@ -191,6 +325,13 @@ body {
   text-shadow: 3px 3px 0 black;
   position: absolute;
   transform: translate(0, -50%);
+}
+
+@media screen and (max-width: 520px) {
+  .block__text--text_top,
+  .block__text--text_down {
+    font-size: 28px;
+  }
 }
 
 .block > .block__text--text_top {
@@ -217,6 +358,21 @@ body {
   box-shadow: 6px 6px 10px 0px rgba(255, 255, 255, 0.1);
 }
 
+@media screen and (max-width: 960px) {
+  .block--opened {
+    height: 80%;
+    flex-grow: 4;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .block--opened {
+    height: auto;
+    width: 80%;
+    flex-grow: 6;
+  }
+}
+
 .block--opened::after {
   border: 3px solid rgb(255, 255, 255);
 }
@@ -229,103 +385,29 @@ body {
   color: rgba(255, 255, 255, 0.7);
 }
 
-@media screen and (max-width: 1400px) {
-  .blocks {
-    width: 95%;
-  }
-}
-
 @media screen and (max-width: 1260px) {
-  .block__text--text_center {
-    font-size: 34px;
-  }
-
   .block--font-size > .block__text--text_center {
     font-size: 20px;
   }
 }
 
 @media screen and (max-width: 1100px) {
-  .block + .block {
-    margin-left: 18px;
-  }
-
   .block--font-size > .block__text--text_center {
     font-size: 18px;
   }
 }
 
 @media screen and (max-width: 960px) {
-  .block__text--text_center {
-    font-size: 28px;
-  }
-
-  .block__text--text_down {
-    font-size: 48px;
-  }
-
-  .block--opened {
-    height: 80%;
-    flex-grow: 4;
-  }
-
   .block--font-size > .block__text--text_center {
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 880px) {
-  .blocks {
-    flex-direction: column;
-  }
-
-  .block {
-    height: auto;
-    width: 60%;
-  }
-
-  .blocks .block:nth-child(even) {
-    margin: 10px 0 0;
-    transform: translateX(100%);
-  }
-  
-  .blocks .block:nth-child(odd) {
-    margin: 10px 0 0;
-    transform: translateX(-100%);
-  }
-
-  .blocks .block:last-child {
-    margin-bottom: 10px;
-  }
-
-  .active .blocks .block:nth-child(even),
-  .active .blocks .block:nth-child(odd) {
-    transform: translateX(0);
-    opacity: 1;
-}
-
-  .block + .block {
-    margin: 0;
-  }
-
-  .block--opened {
-    width: 80%;
-    flex-grow: 6;
-  }
-
-  .block__text--text_center {
-    font-size: 36px;
-  }
-
   .block--font-size > .block__text--text_center {
     font-size: 22px;
   }
 }
 
-@media screen and (max-width: 520px) {
-  .block__text--text_top,
-  .block__text--text_down {
-    font-size: 28px;
-  }
-}
+
 
