--- a/Fun With Canvas/styles/style.css
+++ b/Fun With Canvas/styles/style.css
@@ -35,6 +35,13 @@ body {
   z-index: 1;
 }
 
+@media screen and (max-width: 840px) {
+  .paint {
+    height: 95vh;
+    width: 95%;
+  }
+}
+
 .paint__editor {
   height: 100%;
   width: 130px;
@@ -43,10 +50,13 @@ body {
   border: 5px solid wheat;
   border-right: none;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   overflow: visible;
+}
+
+@media screen and (max-width: 560px) {
+  .paint__editor {
+    width: 90px;
+  }
 }
 
 .paint__editor::before {
@@ -68,6 +78,13 @@ body {
   position: relative;
   border-radius: 0 18px 18px 0;
   transition: all 0.5s linear;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 560px) {
+  .paint__canvas {
+    width: calc(100% - 90px);
+  }
 }
 
 .canvas {
@@ -89,11 +106,36 @@ body {
   z-index: -1;
 }
 
+.paint__buttons {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 14px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .paint__button {
-  height: 76px;
-  width: 76px;
+  height: 68px;
+  width: 68px;
   background-color: rgba(255, 255, 255, 0);
+}
+
+@media screen and (max-width: 560px) {
+  .paint__button {
+    height: 56px;
+    width: 56px;
+  }
+}
+
+.paint__button + .paint__button {
   margin-top: 14px;
+}
+
+@media screen and (max-width: 560px) {
+  .paint__button + .paint__button {
+    margin-top: 18px;
+  }
 }
 
 [data-tooltip] {
@@ -116,6 +158,13 @@ body {
   font-family: "Ubuntu", sans-serif;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   z-index: 2;
+}
+
+@media screen and (max-width: 560px) {
+  [data-tooltip]::after {
+    padding: 3px 6px;
+    font-size: 14px;
+  }
 }
 
 [data-tooltip]:hover::after {
@@ -144,15 +193,55 @@ body {
 }
 
 .button__icon {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
+}
+
+.paint__line-width {
+  height: 58px;
+  width: 100%;
+  background-color: transparent;
+  box-shadow: 0px -5px 11px -6px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  bottom: 0;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  align-items: center;
+  transition: all 0.3s linear;
+  opacity: 1;
+}
+
+.paint__editor--opened > .paint__line-width {
+  bottom: 18%;
+}
+
+.line-width__text {
+  font-size: 14px;
+  color: wheat;
+  font-family: "Ubuntu", sans-serif;
+}
+
+@media screen and (max-width: 560px) {
+  .line-width__text {
+    font-size: 12px;
+  }
+}
+
+.line-width__round {
+  height: 3px;
+  width: 3px;
+  border-radius: 50%;
+  background-color: rgb(175, 45, 147);
+  background-color: wheat;
 }
 
 .paint__form {
-  height: 20%;
+  height: 18%;
   width: 280%;
   background-color: rgb(87, 67, 105);
-  box-shadow: 7px -6px 11px -6px rgba(0, 0, 0, 0.6);
+  box-shadow: 7px -6px 11px -6px rgba(0, 0, 0, 0.5);
   border-radius: 0 0 0 18px;
   position: absolute;
   left: 0;
@@ -166,9 +255,16 @@ body {
   z-index: 3;
 }
 
-.paint__form--opened {
+@media screen and (max-width: 560px) {
+  .paint__form {
+    height: 15%;
+    width: 300%;
+  }
+}
+
+.paint__editor--opened > .paint__form {
   opacity: 1;
-  transform: translateX(0);
+  transform: translateX(0); 
 }
 
 .paint__form--opened::after {
@@ -185,6 +281,12 @@ body {
   width: 80%;
   padding: 20px;
   background-color: transparent;
+}
+
+@media screen and (max-width: 560px) {
+  .form__input {
+    width: 90%;
+  }
 }
 
 .input-range {
@@ -214,6 +316,14 @@ body {
   cursor: pointer;
   margin-top: -11px;
   box-shadow: 0 5px 15px -5px rgb(0, 0, 0);
+}
+
+@media screen and (max-width: 560px) {
+  .input-range::-webkit-slider-thumb {
+    height: 18px;
+    width: 10px;
+    margin-top: -8px;
+  }
 }
 
 .input-range::-webkit-slider-runnable-track {
@@ -250,51 +360,5 @@ body {
   padding: 0;
 }
 
-@media screen and (max-width: 840px) {
-  .paint {
-    height: 95vh;
-    width: 95%;
-  }
-}
 
-@media screen and (max-width: 560px) {
-  .paint__editor {
-    width: 90px;
-  }
 
-  .paint__canvas {
-    width: calc(100% - 90px);
-  }
-
-  .paint__button {
-    height: 56px;
-    width: 56px;
-    margin-top: 18px;
-  }
-
-  .button__icon {
-    height: 40px;
-    width: 40px;
-  }
-
-  [data-tooltip]::after {
-    padding: 3px 6px;
-    font-size: 14px;
-  }
-
-  .paint__form {
-    height: 15%;
-    width: 300%;
-  }
-
-  .form__input {
-    width: 90%;
-  }
-
-  .input-range::-webkit-slider-thumb {
-    height: 18px;
-    width: 10px;
-    margin-top: -8px;
-  }
-  
-}
