--- a/meditation-app/styles/style.css
+++ b/meditation-app/styles/style.css
@@ -5,7 +5,8 @@
 body {
   margin: 0;
   padding: 0;
-  /* background-color: rgba(72, 53, 76, 0.7); */
+  background-color: rgba(0, 0, 0, 0.7);
+  font-family: 'Bitter', serif;
 }
 
 .visually-hidden {
@@ -16,153 +17,174 @@ body {
   margin: -1px;
 }
 
-.page {
+.meditation {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: relative;
+}
+
+.meditation__video-block {
+  width: 100%;
+  height: 100%;
+  position: absolute;
   overflow: hidden;
 }
 
-.video-block {
-  width: 100%;
-  height: 100%;
-
+.video-block__wrapper {
+  display: flex;
+  transition: all 0.5s linear;
 }
 
-.navigation {
+.meditation__video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  object-position: center;
+}
+
+.meditation__navigation {
   height: 100%;
-  width: 160px;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 2;
+  width: 300px;
+  background-color: rgba(255, 255, 255, 0.1);
   position: absolute;
   top: 0;
   right: 0;
-  box-shadow: -9px 0px 12px -3px rgba(34, 60, 80, 0.8);
-}
-
-.list {
-  height: 100%;
-  list-style-type: none;
-  padding-left: 0;
-  margin: 0;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.navigation__item {
-  height: 90px;
-  width: 90px;
-  border-radius: 50%;
-  cursor: pointer;
-  overflow: hidden;
+.button {
+  outline: none;
+  border: none;
+  background-color: transparent;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.8), 0 2px 10px rgba(0, 0, 0, 0.8);
-  transition: all 0.2s linear;
-  opacity: 0.9;
+  cursor: pointer;
+  transition: all 0.4s linear;
+  font-family: 'Bitter', serif;
 }
 
-.navigation__item:hover {
-  /* border: 1px solid rgba(222, 222, 222, 0.4); */
-  box-shadow: 0px 4px 10px 2px rgba(222, 222, 222, 0.4),
-    -1px -8px 10px -5px rgba(222, 222, 222, 0.4);
+.button:hover {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 15px rgba(222, 222, 222, 0.5), 0 2px 10px rgba(222, 222, 222, 0.5);
+}
+
+.navigation__button-element {
+  height: 100px;
+  width: 170px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.8;
+}
+
+.meditation__navigation .button-element--active,
+.meditation__controll .button-time--active {
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 15px rgba(222, 222, 222, 0.8), 0 2px 10px rgba(222, 222, 222, 0.8);
   opacity: 1;
 }
 
-.fake {
+.button-element--background_fire {
+  background-image: url(../assets/images/fire_Moment.jpg);
+}
+
+.button-element--background_air {
+  background-image: url(../assets/images/air_moment.jpg);
+}
+
+.button-element--background_water {
+  background-image: url(../assets/images/water_moment.jpg);
+}
+
+.button-element--background_earth {
+  background-image: url(../assets/images/earth_moment.jpg);
+}
+
+.button-element__name {
+  color: white;
+  font-size: 42px;
+  letter-spacing: 3px;
+  text-shadow: 1px 1px 2px 2px black;
+  opacity: 0;
+  transition: opacity 0.4s linear;
+}
+
+.navigation__button-element:hover > .button-element__name {
+  opacity: 1;
+}
+
+.meditation__controll {
   height: 100%;
-  width: 160px;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2;
+  width: 300px;
   position: absolute;
   top: 0;
   left: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.controll__button-time {
+  height: 80px;
+  width: 170px;
+  color: white;
+  font-size: 28px;
+  opacity: 0.6;
+}
+
+.controll__button-time:hover {
+  opacity: 0.8;
+}
+
+.controll__button-play,
+.controll__button-reset {
+  opacity: 0.8;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+.controll__button-play {
+  height: 130px;
+  width: 130px;
+  border-radius: 50%;
+  position: relative;
+}
+
+.controll__button-play:hover,
+.controll__button-replay:hover {
+  opacity: 1;
+}
+
+.button-play__text,
+.button-play__timer {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.button-play__text{
+  top: 30%;
+  font-size: 28px;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 600;
+}
+
+.button-play__timer {
+  margin-top: 10px;
+  font-size: 32px;
+  opacity: 1;
+  top: 50%;
   color: white;
 }
 
-.navigation__image,
-.block__image,
-.video,
-.video-item {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-}
-
-
-
-.button {
-  background-color: transparent;
-  border: none;
-  outline: none;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7), 0 2px 15px rgba(0, 0, 0, 0.9);
-  cursor: pointer;
-}
-
-.button-play-stop {
-  height: 150px;
-  width: 150px;
-  /* position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
-  border-radius: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.button-play-stop:hover,
-.timer__button:hover {
-  border: 2px solid black;
-}
-
-.play {
-  height: 100px;
-  width: 100px;
-}
-
-.timer-controls {
-  width: 220px;
-  height: 100%;
-  padding: 60px 0 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.3);
-  position: absolute;
-  top: 0;
-  right: 160px;
-  z-index: 1;
-  box-shadow: -9px 0px 12px -3px rgba(34, 60, 80, 0.4);
-  transform: translateX(200%);
-  transition: all 0.3s ease-out;
-}
-.timer-controls_opened .timer-controls {
-  transform: translateX(0);
-}
-
-.timer-controls::after {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 160px;
-  background-color: rgba(0, 0, 0, 0.4);
-  top: 0;
-  left: 100%;
-}
-
-.timer__button {
-  height: 60px;
-  width: 180px;
+.controll__button-reset {
+  height: 46px;
+  width: 110px;
   border-radius: 10px;
-  text-transform: uppercase;
-  font-size: 20px;
-  font-weight: 900;
-  background-color: rgba(255, 255, 255, 0.1);
-  opacity: 0.6;
+  font-size: 24px;
 }
 
 
